update some codes in frontend and backend,create some class in backend.